v0.1.2
- Fix a bug making the custom events sometimes fire their events after the
modules load
- The Chrome and Opera extensions are now localised

v0.1.1
- Re-enable Safari support
- Fix Safari cross-domain requests problem
- Add unit tests for sources/classes/{JS,Storage}.js
- More JavaScript code is now linted

v0.1.0
- Switch to Grunt to build the project
- Switch to the Lo-Dash template engine
- Set up JSHint and Travis-CI
- Set up the new module system
- The external tools sync button is more beautifuly integrated
- Add the possibility to drop all the bag content in one click while outside
- Fix a bug sometimes occuring and making the modules adding content to the
gamebody fail

v0.0.10
- Allow to block the Twitter share on the Gazette
- Hide the building/zone image
- Fix the watchmen button position
- Change configuration panel design

v0.0.9
- Use the MT button style to disable a button
- Less intrusive default options
- Fix missing external tools bar when clicking on city overview
- Fix bug in the gazette forbiding to select a filter
- Constructions are now hidden directly from the building page
- Change configuration panel appearance

v0.0.8
- Greatly increase performance
- Enable cyanide protection (to avoid accidental deaths...)

v0.0.7
- Fix external tools bar positionning (in DOM)
- Fix external tools update
- Rearrange configuration panel DOM
- Now only show the external tools available on the website language
- Add Dusk Dawn support (english tool)
- Add Map Viewer support (english tool)
- Disable the update button while request(s) are underway

v0.0.6
- Fix bug in the config panel when mouse hovers over a disabled checkbox
- Fix GreaseMonkey external tools sync bug
- Fix Firefox compability
- Protect against potential infinite loop
- JavaScript code injection is now protected against malicious string
- Avoid to load some features if not logged in

v0.0.5
- Replace innerHTML by textContent
- Fix GreaseMonkey update URL
- Massive refactoring